syntax = "proto3";
package celestia.blob.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "celestia/blob/v1/params.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/blob/types";

// Query defines the gRPC query service.
service Query {
  // Params queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/blob/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}
